--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-background": "forever start app/index_cicd_tutorial.js",
+    "start": "node index.js",
     "stop": "forever stopall",
     "start-server": "node app/index_cicd_tutorial.js",
     "test": "./node_modules/.bin/jasmine-node spec ",
