--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ test_project:
 create_merge_request:
   stage: createMR
   script:
+    - chmod +x ./commit.sh
     - 'echo Merge request opened by $GITLAB_USER_NAME'
     - ./commit.sh
 
