--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,10 +19,17 @@ test_project:
     script:
         - npm test
 
-create_merge_request:
-  stage: createMR
-  script:
-    - chmod +x ./commit.sh
-    - 'echo Merge request opened by $GITLAB_USER_NAME'
-    - ./commit.sh
+#create_merge_request:
+ # stage: createMR
+ # script:
+   # - chmod +x ./commit.sh
+   # - 'echo Merge request opened by $GITLAB_USER_NAME'
+   # - ./commit.sh
 
+create_merge_request:
+    before_script: []   # We do not need any setup work, let's remove the global one (if any)
+    stage: createMR
+    only:
+      - /^feature\/*/   # We have a very strict naming convention
+    script:
+        - HOST=${CI_PROJECT_URL} CI_PROJECT_ID=${CI_PROJECT_ID} CI_COMMIT_REF_NAME=${CI_COMMIT_REF_NAME} GITLAB_USER_ID=${GITLAB_USER_ID} PRIVATE_TOKEN=${PRIVATE_TOKEN} ./commit.sh
