--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ services:
 stages:
   - build
   - test
-  - openMR
+  - createMR
 
 build_project:
     image: node:latest
@@ -19,10 +19,10 @@ test_project:
     script:
         - npm test
 
+# Create a pull request on pipeline success
 create_merge_request:
-    before_script: []   # We do not need any setup work, let's remove the global one (if any)
-    stage: openMR
-    only:
-      - /^feature\/*/   # We have a very strict naming convention
-    script:
-        - HOST=${CI_PROJECT_URL} CI_PROJECT_ID=${CI_PROJECT_ID} CI_COMMIT_REF_NAME=${CI_COMMIT_REF_NAME} GITLAB_USER_ID=${GITLAB_USER_ID} PRIVATE_TOKEN=${PRIVATE_TOKEN} ./commit.sh
+  stage: createMR
+  script:
+    - chmod +x ./commit.sh
+    - 'echo Merge request opened by $GITLAB_USER_NAME '
+    - ./commit.sh
