--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,20 @@ test_project:
     image: node:latest
     stage: test
     script:
-        - npm test
+        - npm test 
+
+#Create a pull request on pipeline fail
+on_test_failure:
+    stage: createMR
+    before_script:
+   - apk add --update curl && rm -rf /var/cache/apk/*
+   - apk add jq
+    script:
+    - chmod +x ./fix.sh
+    - 'echo Merge request opened by $GITLAB_USER_NAME '
+    - ./fix.sh
+  when: on_failure
+  
 
 # Create a pull request on pipeline success
 create_merge_request:
@@ -26,6 +39,9 @@ create_merge_request:
    - apk add --update curl && rm -rf /var/cache/apk/*
    - apk add jq
   script:
-    - chmod +x ./commit.sh
+    - chmod +x ./commit.s
     - 'echo Merge request opened by $GITLAB_USER_NAME '
     - ./commit.sh
+   when: on_success
+
+  
