--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ stages:
   - build
   - test
   - createMR
-  - deploy
+  - deploytostaging
+  - deploytoprod
 
 build_project:
     image: node:latest
@@ -25,7 +26,7 @@ test_project:
     script:
         - npm test --progress false --watch false 
 
-#Create a pull request on pipeline fail
+#Create a push request on pipeline fail
 on_pipeline_failure:
   stage: createMR
   before_script:
@@ -37,27 +38,44 @@ on_pipeline_failure:
     - ./fix.sh
   when: on_failure
 
-# Create a pull request on pipeline success
+# Create a push request on pipeline success
 create_merge_request:
   stage: createMR
   before_script:
-   - apk add --update curl && rm -rf /var/cache/apk/*
-   - apk add jq
   script:
     - chmod +x ./commit.sh
     - 'echo Merge request opened by $GITLAB_USER_NAME '
     - ./commit.sh
   when: on_success
 
-#deploy to production - AWS
-toAWS:
-  stage: deploy
-  before_script:
+# create a push request from staging to master
+create_merge_request:
+  stage: createMR
+  script:
+    - chmod +x ./prod.sh
+    - 'echo Merge request opened by $GITLAB_USER_NAME '
+    - ./prod.sh
+   
+#deploy to staging - AWS
+create_merge_request:
+  stage: deploytostaging
+  before_script: 
    - apk add --no-cache py-pip
    - pip install awscli
+   - $(aws ecr get-login --no-include-email --region us-east-2)
+  script: 
+    - docker build -t $REPOSITORY_URL
+    - docker push $REPOSITORY_URL:staging
+    - aws ecs update-service --cluster nodejs-staging --service node-js-service1 --force-new-deployment --region us-east-2
+   
+
+#deploy to production - AWS
+toAWS1:
+  stage: deploytoprod
   script:     
-    - $(aws ecr get-login --no-include-email --region us-east-2)
     - docker build -t $REPOSITORY_URL .
     - docker push $REPOSITORY_URL
     - aws ecs update-service --cluster node-js-cluster --service node-js-service --force-new-deployment --region us-east-2
+  when: on_success
+  only: master
 
