Pushing to master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,8 @@ on_pipeline_failure:
 create_merge_request:
   stage: createMR
   before_script:
+   - apk add --update curl && rm -rf /var/cache/apk/*
+   - apk add jq
   script:
     - chmod +x ./commit.sh
     - 'echo Merge request opened by $GITLAB_USER_NAME '
@@ -51,6 +53,9 @@ create_merge_request:
 # create a push request from staging to master
 create_merge_request:
   stage: pushToMaster
+  before_script:
+   - apk add --update curl && rm -rf /var/cache/apk/*
+   - apk add jq
   script:
     - chmod +x ./prod.sh
     - 'echo Merge request opened by $GITLAB_USER_NAME '
