--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ stages:
   - test
   - createMR
   - pushToMaster
-  - deploy
+  - deploytos
+  - deploytop
 
 build_project:
     image: node:latest
@@ -51,7 +52,7 @@ create_merge_request:
   when: on_success
 
 # create a push request from staging to master
-branching_to_master:
+branching_to_master	:
   stage: pushToMaster
   before_script:
    - apk add --update curl && rm -rf /var/cache/apk/*
@@ -63,19 +64,20 @@ branching_to_master:
    
 #deploy to staging - AWS
 deploytostag:
-  stage: deploy
+  stage: deploytos
   before_script: 
    - apk add --no-cache py-pip
    - pip install awscli
    - $(aws ecr get-login --no-include-email --region us-east-2)
   script: 
     - docker build -t $REPOSITORY_URL
-    - docker push $REPOSITORY_URL:staging
+    - docker tag node-js:staging 397937580987.dkr.ecr.us-east-2.amazonaws.com/node-js:staging
+    - docker push $REPOSITORY_URL
     - aws ecs update-service --cluster nodejs-staging --service node-js-service1 --force-new-deployment --region us-east-2
    
 #deploy to production - AWS
 deploytoprod:
-  stage: deploy
+  stage: deploytop
   before_script:
    - apk add --no-cache py-pip
    - pip install awscli
